<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Apartments"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ApartmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apartments_title"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="44sp"
        android:gravity="center_horizontal" />


    <CheckBox
        android:id="@+id/apartment_1"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@drawable/rectangle_checkbox"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="@string/brampton_towers_1650" />

    <CheckBox
        android:id="@+id/apartment_2"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@drawable/rectangle_checkbox"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="@string/_440_remembrance_road_brampton_2800" />

    <CheckBox
        android:id="@+id/apartment_3"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/rectangle_checkbox"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="@string/_8_silver_maple_court_1800" />

    <CheckBox
        android:id="@+id/apartment_4"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectangle_checkbox"
        android:text="@string/_14_germain_circle_2600"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/apartment_5"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@drawable/rectangle_checkbox"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:text="@string/lytton_park_1600"/>

    <CheckBox
        android:id="@+id/apartment_6"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@drawable/rectangle_checkbox"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:textSize="20sp"
        android:text="@string/the_peanut_toronto_1850" />

    <Button
        android:id="@+id/goto_paymentportal"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:onClick="enter_PaymentScreen"
        android:background="#F9A825"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/payment" />

</LinearLayout>