<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Condominium">

    <TextView
        android:id="@+id/TitleCondominium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/condominium"
        android:textAlignment="center"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/apartment_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/apartment_6"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@drawable/rectangle_checkbox"
        android:text="@string/the_peanut_toronto_1850"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="532dp" />


    <CheckBox
        android:id="@+id/apartment_1"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_checkbox"
        android:text="@string/brampton_towers_1650"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/apartment_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/apartment_2"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@drawable/rectangle_checkbox"
        android:text="@string/_440_remembrance_road_brampton_2800"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="179dp" />

    <CheckBox
        android:id="@+id/apartment_3"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/rectangle_checkbox"
        android:text="@string/_8_silver_maple_court_1800"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="259dp" />

    <CheckBox
        android:id="@+id/apartment_4"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/rectangle_checkbox"
        android:text="@string/_14_germain_circle_2600"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="356dp" />

    <CheckBox
        android:id="@+id/apartment_5"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@drawable/rectangle_checkbox"
        android:text="@string/lytton_park_1600"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="438dp" />

    <Button
        android:id="@+id/goto_paymentportal"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#F9A825"
        android:text="@string/payment"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="633dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>