<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">


    <FrameLayout
        android:layout_width="380dp"
        android:layout_height="603dp"
        android:background="@drawable/rectangle_paymentinfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="150sp"
            android:gravity="center_horizontal"
            android:hint="@string/full_name"
            android:textAlignment="center" />

        <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="220sp"
            android:gravity="center_horizontal"
            android:hint="@string/debit_credit_card_number"
            android:textAlignment="center" />

        <Button
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60sp"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="280sp"
            android:layout_marginEnd="120sp"
            android:layout_marginRight="120sp"
            android:text="@string/pay" />


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>